--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -182,14 +182,16 @@ label.shout=Chat\!
 label.chat=Chat
 label.overview=Überblick
 label.contact=Contact
-label.Personal=Personal
-label.modify=Modify
-label.BroadcastMessages=Broadcast messages
-label.message=Message
-label.sendBroadcastMessage=Send broadcast message
-label.datetime=Date/time
-label.sendMessage=Send message
-label.RegisterSuccessfull=Your registration was successful. You can now login\!
-label.Login=Login
+label.Personal = Personal
+label.modify = &#196;ndern
+label.BroadcastMessages = Broadcast-Nachrichten
+label.message = Message
+label.sendBroadcastMessage = Senden Broadcast-Nachricht
+label.datetime = Datum / Uhrzeit
+label.sendMessage = Nachricht
+label.RegisterSuccessfull = Ihre Anmeldung erfolgreich war. Sie k&#246;nnen sich jetzt anmelden \!
+label.Login = Login
+label.Back = Zur&#252;ck
+label.add = Hinzuf&#252;gen
 
 
