--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -191,6 +191,8 @@ label.datetime=Date/time
 label.sendMessage=Send message
 label.RegisterSuccessfull=Your registration was successful. You can now login\!
 label.Login=Login
+label.Back=Back
+label.add=Add
 
 
 
