--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -182,12 +182,14 @@ label.shout=Chat\!
 label.chat=Chat
 label.overview=Vue d'ensemble
 label.contact=Contact
-label.Personal=Personal
-label.modify=Modify
-label.BroadcastMessages=Broadcast messages
-label.message=Message
-label.sendBroadcastMessage=Send broadcast message
-label.datetime=Date/time
-label.sendMessage=Send message
-label.RegisterSuccessfull=Your registration was successful. You can now login\!
-label.Login=Login
+label.Personal = Personal
+label.modify = Modifier
+label.BroadcastMessages = messages de diffusion
+label.message = Message
+label.sendBroadcastMessage = message de diffusion d'envoi
+label.datetime = Date / heure
+label.sendMessage = Envoyer le message
+label.RegisterSuccessfull = Votre inscription a r&#233;ussi. Vous pouvez maintenant vous connecter \!
+label.Login = Connexion
+label.Back = Retour
+label.add = Ajouter
