--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -90,7 +90,7 @@ label.SaveSettings=Bewaar instellingen
 label.ModeOfTravel=Reiswijze
 label.LocationName=Locatie naam
 label.badMapEntry=Foutieve ingave\: deze plaats bestaat niet\!
-label.Driving=Auto rijden
+label.Driving=Auto
 label.Walking=Wandelen
 label.Bicycling=Fietsen
 label.Transit=Doorreis
@@ -182,12 +182,14 @@ label.shout=Chat\!
 label.chat=Chat
 label.overview=Overzicht
 label.contact=Contact
-label.Personal=Personal
-label.modify=Modify
-label.BroadcastMessages=Broadcast messages
-label.message=Message
-label.sendBroadcastMessage=Send broadcast message
-label.datetime=Date/time
-label.sendMessage=Send message
-label.RegisterSuccessfull=Your registration was successful. You can now login\!
-label.Login=Login
+label.Personal=Persoonlijk
+label.modify=Aanpassen
+label.BroadcastMessages=Groepsberichten
+label.message=Bericht
+label.sendBroadcastMessage=Zend groepsbericht
+label.datetime=Datum/tij
+label.sendMessage=Zend bericht
+label.RegisterSuccessfull=Uw registratie is gelukt. U kan nu aanmelden\!
+label.Login=Aanmelden
+label.Back=Terug
+label.add=Voeg toe
