--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -193,5 +193,6 @@ label.RegisterSuccessfull = Ihre Anmeldung erfolgreich war. Sie k&#246;nnen sich
 label.Login = Login
 label.Back = Zur&#252;ck
 label.add = Hinzuf&#252;gen
+label.Location=Lage
 
 
