--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -193,6 +193,7 @@ label.RegisterSuccessfull=Your registration was successful. You can now login\!
 label.Login=Login
 label.Back=Back
 label.add=Add
+label.Location=Location
 
 
 
