--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -193,3 +193,4 @@ label.RegisterSuccessfull = Votre inscription a r&#233;ussi. Vous pouvez mainten
 label.Login = Connexion
 label.Back = Retour
 label.add = Ajouter
+label.Location=Emplacement
