--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -193,3 +193,4 @@ label.RegisterSuccessfull=Uw registratie is gelukt. U kan nu aanmelden\!
 label.Login=Aanmelden
 label.Back=Terug
 label.add=Voeg toe
+label.Location=Locatie
