--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -142,7 +142,7 @@ label.ApplicationDevBedrijfsApp=Application development - Bedrijfsapplicaties
 label.ApplicationDevMM=Application development - Multimedia
 label.New=New
 label.Interval=Interval
-label.Dagelijks=Dayly
+label.Dagelijks=Daily
 label.Wekelijks=Weekly
 label.OmDe2Weken=Every two weeks
 label.OmDe4Weken=Every four weeks
