--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -187,7 +187,7 @@ label.modify = &#196;ndern
 label.BroadcastMessages = Broadcast-Nachrichten
 label.message = Message
 label.sendBroadcastMessage = Senden Broadcast-Nachricht
-label.datetime = Datum / Uhrzeit
+label.datetime = Datum - Uhrzeit
 label.sendMessage = Nachricht
 label.RegisterSuccessfull = Ihre Anmeldung erfolgreich war. Sie k&#246;nnen sich jetzt anmelden \!
 label.Login = Login
