--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -187,7 +187,7 @@ label.modify = Modifier
 label.BroadcastMessages = messages de diffusion
 label.message = Message
 label.sendBroadcastMessage = message de diffusion d'envoi
-label.datetime = Date / heure
+label.datetime = Date - heure
 label.sendMessage = Envoyer le message
 label.RegisterSuccessfull = Votre inscription a r&#233;ussi. Vous pouvez maintenant vous connecter \!
 label.Login = Connexion
