--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -187,7 +187,7 @@ label.modify=Aanpassen
 label.BroadcastMessages=Groepsberichten
 label.message=Bericht
 label.sendBroadcastMessage=Zend groepsbericht
-label.datetime=Datum/tij
+label.datetime=Datum - tijd
 label.sendMessage=Zend bericht
 label.RegisterSuccessfull=Uw registratie is gelukt. U kan nu aanmelden\!
 label.Login=Aanmelden
