--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,8 +5,8 @@ label.telephone = Telephone
 label.firstname = Firstname
 label.lastname = Lastname
 label.dateOfBirth = Date of birth
-label.street = street
-label.number = number
+label.street = Street
+label.number = Number
 label.zipcode = Zipcode
 label.city = City
 label.addUser = Add user
@@ -97,9 +97,9 @@ label.Transit=Transit
 label.information=Information
 label.goodMapEntry=Good entry, this place excists\!
 label.showRoute=Show route
-label.StoppingPointName=Stoppingpoint name
-label.StoppingPointType=Stoppingpoint type
-label.StoppingPointInfo=Stopping point info
+label.StoppingPointName=Name
+label.StoppingPointType=Type
+label.StoppingPointInfo=Info
 label.MyOrganisedTrips=My organised trips
 label.MyJoinedTrips=My joined trips
 label.FoundOnTripName=Found on trip name
