--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -5,8 +5,8 @@ label.telephone = Telefoon
 label.firstname = Voornaam
 label.lastname = Achternaam
 label.dateOfBirth = Geboortedatum
-label.street = straat
-label.number = nummer
+label.street = Straat
+label.number = Nummer
 label.zipcode = Postcode
 label.city = Stad
 label.addUser = Gebruiker toevoegen
@@ -97,9 +97,9 @@ label.Transit=Doorreis
 label.information=Informatie
 label.goodMapEntry=Goeie ingave, de plaats bestaat\!
 label.showRoute=Toon route
-label.StoppingPointName=Stopplaats naam
-label.StoppingPointType=Stopplaats type
-label.StoppingPointInfo=Stopplaats info
+label.StoppingPointName=Naam
+label.StoppingPointType=Type
+label.StoppingPointInfo=Info
 label.MyOrganisedTrips=Trips die ik georganiseerd heb
 label.MyJoinedTrips=Trips waaraan ik deelneem
 label.FoundOnTripName=Gevonden op trip naam
